--- a/index.html
+++ b/index.html
@@ -12,11 +12,24 @@ h1{
     </style>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, fuga!</p>
+    <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, fuga!</p>
     <h1>Hello world</h1>
     <h2>External</h2>
     <p class="par">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur cumque assumenda laboriosam quo soluta. Ab eligendi saepe nam in rerum.</p>
     <p class="par" id="jk">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem eligendi reiciendis dolorum voluptate. Deserunt delectus nulla fugit, ut minus cupiditate.</p>
-    
+     -->
+    <!-- <div>
+        <h1>Hello world</h1>
+    </div>
+    <p style="color:brown">Inline styling</p> -->
+    <!-- <h3>
+        This is external css
+          <p align="left">This paragraph is styled using external CSS</p>
+    </h3> -->
+  <div class="container">
+    <div class="box box1"></div>
+    <div class="box box2"></div>
+    <div class="box box3"></div>
+  </div>
 </body>
 </html>
