Float and display

--- a/index.html
+++ b/index.html
@@ -26,10 +26,33 @@ h1{
         This is external css
           <p align="left">This paragraph is styled using external CSS</p>
     </h3> -->
-  <div class="container">
+  <!-- <div class="container">
     <div class="box box1"></div>
     <div class="box box2"></div>
     <div class="box box3"></div>
+  </div> -->
+  <!-- <span class="jk">Hello</span>
+  <span class="jk">Hi</span>
+<span class="jk">CSE11</span>
+<div class="jk2">ABES</div>
+<div class="jk2">Engineering college</div>-->
+ <div class="container">
+  <h1 class="AS">Display:inline block(Product cards)</h1>
+  <div class="box box1">
+    <h4>Book</h1>
+    <p>$10</p>
   </div>
+  <div class="box box2">
+    <h4>Headphones</h4>
+    <p>$25</p>
+  </div>
+  <div class="box box3">
+    <h4>Watch</h4>
+    <p>$50</p>
+  </div>
+</div>
+<!-- <div>
+  <h2>float(Image in an article)</h2>
+</div> -->
 </body>
 </html>
